# provenance-sensorium

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  RELEASE_NOTES.md  USAGE.md  pyproject.toml
.github/workflows/: tests.yml
docs/brand/: README.md
docs/superpowers/plans/: 2026-06-16-provenance-sensorium.md  2026-06-16-warden-sensorium.md
docs/superpowers/specs/: 2026-06-16-provenance-sensorium-design.md  2026-06-16-warden-sensorium-design.md
examples/: demo.py
fixtures/sample_project/: EVIDENCE.md  README.md
project-docs/: public-boundary.md
project-docs/specs/: SPEC-provenance-sensorium-forward-delivery.md
scripts/: check_public_surface.py
src/provenance_sensorium/: __init__.py  cli.py  layers.py  models.py  public_surface.py  receipts.py  secret_patterns.py  sensors.py
src/warden_sensorium/: __init__.py  cli.py  layers.py  models.py  public_surface.py  receipts.py
tests/: test_cli.py  test_layers.py  test_models.py  test_public_surface.py  test_receipts.py  test_sensors.py
