[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "provenance-sensorium"
version = "0.1.0"
description = "Turn files, git state, and Markdown claims into hash-stamped provenance receipts; flag secrets and unevidenced claims before publishing."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Zain Dana Harper" }]
keywords = ["ai-safety", "provenance", "security-research", "guardrails", "evidence"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
sensorium = "provenance_sensorium.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
